utoipa-gen/tests/snapshots/schema_derive_test__derive_component_with_range_to.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: example_schema
---
{
  "properties": {
    "values": {
      "properties": {
        "end": {
          "format": "double",
          "type": "number"
        }
      },
      "required": [
        "end"
      ],
      "type": "object"
    }
  },
  "required": [
    "values"
  ],
  "type": "object"
}
