utoipa-gen/tests/snapshots/schema_derive_test__derive_component_with_raw_identifier.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: doc
snapshot_kind: text
---
{
  "properties": {
    "in": {
      "type": "string"
    }
  },
  "required": [
    "in"
  ],
  "type": "object"
}
