utoipa-gen/tests/snapshots/schema_derive_test__derive_component_with_smallvec_feature.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: bar
snapshot_kind: text
---
{
  "properties": {
    "links": {
      "items": {
        "type": "string"
      },
      "type": "array"
    }
  },
  "required": [
    "links"
  ],
  "type": "object"
}
