utoipa-gen/tests/snapshots/schema_derive_test__derive_correct_exclusive_min_properties.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: schema
---
{
  "minProperties": 1,
  "properties": {
    "property_1": {
      "type": [
        "string",
        "null"
      ]
    },
    "property_2": {
      "type": [
        "string",
        "null"
      ]
    }
  },
  "type": "object"
}
