utoipa-gen/tests/snapshots/schema_derive_test__derive_enum_varnames.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "enum": [
    "error",
    "ok",
    "unknown"
  ],
  "type": "string",
  "x-enum-varnames": [
    "Error",
    "Ok",
    "Unknown"
  ]
}
