utoipa-gen/tests/snapshots/schema_derive_test__derive_enum_with_title.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "enum": [
    "Admin",
    "Moderator",
    "User"
  ],
  "title": "UserType",
  "type": "string"
}
