utoipa-gen/tests/snapshots/schema_derive_test__derive_enum_with_unnamed_primitive_field_with_tag.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "properties": {
        "tag": {
          "enum": [
            "Value"
          ],
          "type": "string"
        }
      },
      "required": [
        "tag"
      ],
      "type": "object"
    }
  ]
}
